--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>net.lkrnac.blog.spyingonconfig</groupId>
-	<artifactId>spying-on-spring-config</artifactId>
+	<groupId>net.lkrnac.blog.testing</groupId>
+	<artifactId>mock-spring-bean</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>${project.artifactId}</name>
